--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "dependencies": {
         "at.js": "^1.5.4",
         "jquery.caret": "^0.3.1",
-        "moment": "^2.22.2"
+        "moment": "^2.22.2",
+        "trix": "^0.11.4",
+        "vue-instantsearch": "^1.7.0"
     }
 }
