--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
         "at.js": "^1.5.4",
         "jquery.caret": "^0.3.1",
         "moment": "^2.22.2",
+        "node-sass": "^4.9.2",
         "trix": "^0.11.4",
-        "vue-instantsearch": "^1.7.0"
+        "vue-instantsearch": "^1.7.0",
+        "vue-js-modal": "^1.3.16"
     }
 }
