--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "laravel/scout": "^4.0",
         "laravel/tinker": "^1.0",
         "predis/predis": "^1.1",
+        "spatie/laravel-permission": "^2.13",
         "stevebauman/purify": "^2.0"
     },
     "require-dev": {
