--- a/package.json
+++ b/package.json
@@ -21,11 +21,13 @@
     },
     "dependencies": {
         "at.js": "^1.5.4",
+        "install": "^0.12.1",
         "jquery.caret": "^0.3.1",
         "moment": "^2.22.2",
         "node-sass": "^4.9.2",
         "trix": "^0.11.4",
         "vue-instantsearch": "^1.7.0",
-        "vue-js-modal": "^1.3.16"
+        "vue-js-modal": "^1.3.16",
+        "vue-table-component": "^1.9.1"
     }
 }
