--- a/package.json
+++ b/package.json
@@ -27,7 +27,6 @@
         "node-sass": "^4.9.2",
         "trix": "^0.11.4",
         "vue-instantsearch": "^1.7.0",
-        "vue-js-modal": "^1.3.16",
-        "vue-table-component": "^1.9.1"
+        "vue-js-modal": "^1.3.16"
     }
 }
