--- a/package.json
+++ b/package.json
@@ -21,11 +21,14 @@
     },
     "dependencies": {
         "at.js": "^1.5.4",
+        "i": "^0.3.6",
         "install": "^0.12.1",
         "jquery.caret": "^0.3.1",
         "moment": "^2.22.2",
         "node-sass": "^4.9.2",
+        "npm": "^6.3.0",
         "trix": "^0.11.4",
+        "vue-at": "^2.3.2",
         "vue-instantsearch": "^1.7.0",
         "vue-js-modal": "^1.3.16"
     }
