--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
     "require": {
         "php": "^7.1.3",
         "algolia/algoliasearch-client-php": "^1.27",
+        "barryvdh/laravel-ide-helper": "^2.4",
         "fideloper/proxy": "^4.0",
         "laravel/framework": "5.6.*",
         "laravel/scout": "^4.0",
