--- a/package.json
+++ b/package.json
@@ -11,27 +11,27 @@
     },
     "devDependencies": {
         "axios": "^0.18",
-        "bootstrap": "^4.0.0",
-        "popper.js": "^1.12",
-        "cross-env": "^5.1",
-        "jquery": "^3.2",
-        "laravel-mix": "^2.0",
-        "lodash": "^4.17.4",
-        "vue": "^2.5.7"
+        "bootstrap": "^4.2.1",
+        "popper.js": "^1.14",
+        "cross-env": "^5.2",
+        "jquery": "^3.3",
+        "laravel-mix": "^4.0",
+        "lodash": "^4.17.11",
+        "vue": "^2.5.22"
     },
     "dependencies": {
         "at.js": "^1.5.4",
-        "chart.js": "^2.7.2",
+        "chart.js": "^2.7.3",
         "graph.js": "^1.21.1",
         "i": "^0.3.6",
-        "install": "^0.12.1",
+        "install": "^0.12.2",
         "jquery.caret": "^0.3.1",
-        "moment": "^2.22.2",
-        "node-sass": "^4.9.2",
-        "npm": "^6.4.0",
-        "trix": "^0.11.4",
-        "vue-at": "^2.3.2",
+        "moment": "^2.23.0",
+        "node-sass": "^4.11.0",
+        "npm": "^6.5.0",
+        "trix": "^1.0.0",
+        "vue-at": "^2.5.0-beta",
         "vue-instantsearch": "^1.7.0",
-        "vue-js-modal": "^1.3.16"
+        "vue-js-modal": "^1.3.28"
     }
 }
