--- a/package.json
+++ b/package.json
@@ -12,19 +12,20 @@
     "devDependencies": {
         "axios": "^0.18",
         "bootstrap": "^4.2.1",
-        "popper.js": "^1.14",
         "cross-env": "^5.2",
         "jquery": "^3.3",
         "laravel-mix": "^4.0",
         "lodash": "^4.17.11",
-        "vue": "^2.5.22"
+        "popper.js": "^1.14",
+        "resolve-url-loader": "^3.0.0",
+        "sass-loader": "^7.1.0",
+        "vue": "^2.5.22",
+        "vue-template-compiler": "^2.5.22"
     },
     "dependencies": {
         "at.js": "^1.5.4",
         "chart.js": "^2.7.3",
         "graph.js": "^1.21.1",
-        "i": "^0.3.6",
-        "install": "^0.12.2",
         "jquery.caret": "^0.3.1",
         "moment": "^2.23.0",
         "node-sass": "^4.11.0",
